@@ -8,6 +8,4 @@
 
 #define CHROOT_PREFIX "@judgehost_judgedir@"
 
-#define USE_CGROUPS @USE_CGROUPS@
-
 #endif /* _RUNGUARD_CONFIG_ */
